# impp

./: CMakeLists.txt  README.md  impp.pro
include/: DropArea.h  ImageConverter.h  MainWindow.h
src/: DropArea.cpp  ImageConverter.cpp  MainWindow.cpp  main.cpp
